Fixed plot toggle overflowing in line-scatter-plot

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,3 +1,4 @@
 .row > * {
     padding-left: 1.5rem;
+    padding-right: 1.5rem;
 }
