--- a/src/app/components/plots/plot-card/plot-card.component.css
+++ b/src/app/components/plots/plot-card/plot-card.component.css
@@ -1,5 +1,5 @@
 .card {
-    max-width: 600px !important;
+    max-width: 800px !important;
     margin: 20px auto;
     background-color: var(--background-color-grey);
     border-color: var(--border-color);
